double to single quotes, daemon work, ui and css changes

--- a/themes/dark/main.css
+++ b/themes/dark/main.css
@@ -1,6 +1,7 @@
 .deviceUpFull {
 	background-color: rgba(25, 142, 50, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -8,6 +9,7 @@
 .deviceDownFull {
 	background-color: rgba(255, 0, 0, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -15,6 +17,7 @@
 .deviceUnknownFull {
 	background-color: rgba(0, 0, 255, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -22,6 +25,7 @@
 .deviceDisabledFull {
 	background-color: rgba(161, 161, 161, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -29,6 +33,7 @@
 .deviceRecoveringFull {
 	background-color: rgba(255, 143, 30, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -36,6 +41,7 @@
 .deviceErrorFull {
 	background-color: rgba(117, 15, 125, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -43,6 +49,7 @@
 .deviceNotMonFull {
 	background-color: rgba(250, 253, 158, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -50,48 +57,71 @@
 .tholdAlertNotify {
 	background-color: rgba(242, 25, 36, 0.2);
 	text-align: center;
-	width: 14%;
+	white-space: nowrap;
+	width: 12.5%;
+	color: #eeeeee;
+}
+
+.tholdAlert2Warn {
+	background-color: rgba(200, 25, 36, 0.2);
+	text-align: center;
+	white-space: nowrap;
+	width: 12.5%;
 	color: #eeeeee;
 }
 
 .tholdWarningNotify {
 	background-color: rgba(251, 74, 20, 0.2);
 	text-align: center;
-	width: 14%;
+	white-space: nowrap;
+	width: 12.5%;
 	color: #eeeeee;
 }
 
 .tholdReTriggerEvent {
 	background-color: rgba(255, 122, 48, 0.2);
 	text-align: center;
-	width: 14%;
+	white-space: nowrap;
+	width: 12.5%;
 	color: #eeeeee;
 }
 
 .tholdTriggerEvent {
 	background-color: rgba(250, 253, 158, 0.2);
 	text-align: center;
-	width: 14%;
+	white-space: nowrap;
+	width: 12.5%;
+	color: #eeeeee;
+}
+
+.tholdWarnTrigger {
+	background-color: rgba(210, 223, 128, 0.2);
+	text-align: center;
+	white-space: nowrap;
+	width: 12.5%;
 	color: #eeeeee;
 }
 
 .tholdRestoralNotify {
 	background-color: rgba(204, 255, 204, 0.2);
 	text-align: center;
-	width: 14%;
+	white-space: nowrap;
+	width: 12.5%;
 	color: #eeeeee;
 }
 
 .tholdRestoralEvent {
 	background-color: rgba(205, 207, 196, 0.2);
 	text-align: center;
-	width: 14%;
+	white-space: nowrap;
+	width: 12.5%;
 	color: #eeeeee;
 }
 
 .tholdRestore {
 	background-color: rgba(204, 255, 204, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -99,6 +129,7 @@
 .tholdAlertTrigger {
 	background-color: rgba(242, 23, 33, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -106,6 +137,7 @@
 .tholdReTrigger {
 	background-color: rgba(250, 116, 32, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -113,6 +145,7 @@
 .tholdWarning {
 	background-color: rgba(255, 122, 48, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -120,6 +153,7 @@
 .tholdAlert {
 	background-color: rgba(242, 25, 36, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -127,6 +161,7 @@
 .tholdBaseAlert {
 	background-color: rgba(251, 74, 20, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -134,6 +169,7 @@
 .tholdNotice {
 	background-color: rgba(250, 253, 158, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -141,6 +177,7 @@
 .tholdOk {
 	background-color: rgba(204, 255, 204, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
@@ -148,6 +185,7 @@
 .tholdDisabled {
 	background-color: rgba(205, 207, 196, 0.2);
 	text-align: center;
+	white-space: nowrap;
 	width: 14%;
 	color: #eeeeee;
 }
