--- a/themes/paper-plane/main.css
+++ b/themes/paper-plane/main.css
@@ -78,6 +78,14 @@
 	color: #0A0A0A;
 }
 
+.tholdReTriggerNotify {
+	background-color: rgba(200, 125, 88, 0.8);
+	text-align: center;
+	white-space: nowrap;
+	width: 12.5%;
+	color: #0A0A0A;
+}
+
 .tholdReTriggerEvent {
 	background-color: rgba(255, 122, 48, 0.8);
 	text-align: center;
@@ -152,6 +160,14 @@
 
 .tholdAlert {
 	background-color: rgba(242, 25, 36, 0.8);
+	text-align: center;
+	white-space: nowrap;
+	width: 14%;
+	color: #0A0A0A;
+}
+
+.tholdAcknowledgment {
+	background-color: rgba(242, 120, 88, 0.8);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
