--- a/themes/classic/main.css
+++ b/themes/classic/main.css
@@ -90,7 +90,7 @@
 }
 
 .tholdWarnTrigger {
-	background-color: #F9#FA90;
+	background-color: #F9FA90;
 	text-align: center;
 	white-space: nowrap;
 	width: 12.5%;
