--- a/themes/paw/main.css
+++ b/themes/paw/main.css
@@ -3,6 +3,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -11,6 +12,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -19,6 +21,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -27,6 +30,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -35,6 +39,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -43,6 +48,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -51,6 +57,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -58,7 +65,8 @@
 	background-color: rgba(242, 25, 36, 0.8);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -66,7 +74,8 @@
 	background-color: rgba(200, 25, 36, 0.8);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -74,7 +83,8 @@
 	background-color: rgba(251, 74, 20, 0.8);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -82,7 +92,8 @@
 	background-color: rgba(200, 125, 88, 0.8);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -90,7 +101,8 @@
 	background-color: rgba(255, 122, 48, 0.8);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -98,7 +110,8 @@
 	background-color: rgba(250, 253, 158, 0.8);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -106,7 +119,8 @@
 	background-color: rgba(210, 223, 128, 0.8);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -114,7 +128,8 @@
 	background-color: rgba(204, 255, 204, 0.8);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -122,7 +137,8 @@
 	background-color: rgba(205, 207, 196, 0.8);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -131,6 +147,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -139,6 +156,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -147,6 +165,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -155,6 +174,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -163,14 +183,20 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
+.tholdAckCol {
+	background-color: rgba(238, 130, 238, 0.8);
+}
+
 .tholdAcknowledgment {
-	background-color: rgba(242, 120, 88, 0.8);
+	background-color: rgba(238, 130, 238, 0.8);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -179,6 +205,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -187,6 +214,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -195,6 +223,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
@@ -203,6 +232,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 2px;
 	color: #0A0A0A;
 }
 
