--- a/themes/sunrise/main.css
+++ b/themes/sunrise/main.css
@@ -58,7 +58,7 @@
 	background-color: rgba(242, 25, 36, 0.2);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
 	color: #CACACA;
 }
 
@@ -66,7 +66,7 @@
 	background-color: rgba(200, 25, 36, 0.2);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
 	color: #CACACA;
 }
 
@@ -74,7 +74,7 @@
 	background-color: rgba(251, 74, 20, 0.2);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
 	color: #CACACA;
 }
 
@@ -82,7 +82,7 @@
 	background-color: rgba(200, 125, 88, 0.2);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
 	color: #CACACA;
 }
 
@@ -90,7 +90,7 @@
 	background-color: rgba(255, 122, 48, 0.2);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
 	color: #CACACA;
 }
 
@@ -98,7 +98,7 @@
 	background-color: rgba(250, 253, 158, 0.2);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
 	color: #CACACA;
 }
 
@@ -106,7 +106,7 @@
 	background-color: rgba(210, 223, 128, 0.2);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
 	color: #CACACA;
 }
 
@@ -114,7 +114,7 @@
 	background-color: rgba(204, 255, 204, 0.2);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
 	color: #CACACA;
 }
 
@@ -122,7 +122,7 @@
 	background-color: rgba(205, 207, 196, 0.2);
 	text-align: center;
 	white-space: nowrap;
-	width: 12.5%;
+	width: 11.11%;
 	color: #CACACA;
 }
 
@@ -166,8 +166,12 @@
 	color: #CACACA;
 }
 
+.tholdAckCol {
+	background-color: rgba(138, 43, 226, 0.2);
+}
+
 .tholdAcknowledgment {
-	background-color: rgba(242, 120, 88, 0.2);
+	background-color: rgba(138, 43, 226, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
