--- a/themes/sunrise/main.css
+++ b/themes/sunrise/main.css
@@ -3,6 +3,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -11,6 +12,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -19,6 +21,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -27,6 +30,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -35,6 +39,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -43,6 +48,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -51,6 +57,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -59,6 +66,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -67,6 +75,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -75,6 +84,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -83,6 +93,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -91,6 +102,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -99,6 +111,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -107,6 +120,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -115,6 +129,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -123,6 +138,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -131,6 +147,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -139,6 +156,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -147,6 +165,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -155,6 +174,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -163,6 +183,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -175,6 +196,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -183,6 +205,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -191,6 +214,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -199,6 +223,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
@@ -207,6 +232,7 @@
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
+	padding: 3px;
 	color: #CACACA;
 }
 
