--- a/themes/modern/main.css
+++ b/themes/modern/main.css
@@ -1,5 +1,5 @@
 .deviceUpFull {
-	background-color: rgba(25, 142, 50, 0.8);
+	background-color: rgba(25, 142, 50, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -7,23 +7,27 @@
 }
 
 .deviceDownFull {
-	background-color: rgba(255, 0, 0, 0.8);
+	background-color: rgba(255, 0, 0, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FFFFFF;
+}
+
+.deviceDownFull td {
+	color: #FFFFFF;
 }
 
 .deviceUnknownFull {
-	background-color: rgba(0, 0, 255, 0.8);
+	background-color: rgba(0, 0, 255, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FFFFFF;
 }
 
 .deviceDisabledFull {
-	background-color: rgba(161, 161, 161, 0.8);
+	background-color: rgba(161, 161, 161, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -31,7 +35,7 @@
 }
 
 .deviceRecoveringFull {
-	background-color: rgba(255, 143, 30, 0.8);
+	background-color: rgba(255, 143, 30, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -39,15 +43,15 @@
 }
 
 .deviceErrorFull {
-	background-color: rgba(117, 15, 125, 0.8);
+	background-color: rgba(117, 15, 125, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FFFFFF;
 }
 
 .deviceNotMonFull {
-	background-color: rgba(250, 253, 158, 0.8);
+	background-color: rgba(250, 253, 158, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -55,7 +59,7 @@
 }
 
 .tholdAlertNotify {
-	background-color: rgba(242, 25, 36, 0.8);
+	background-color: rgba(242, 25, 36, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -63,7 +67,7 @@
 }
 
 .tholdAlert2Warn {
-	background-color: rgba(200, 25, 36, 0.8);
+	background-color: rgba(200, 25, 36, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -71,7 +75,7 @@
 }
 
 .tholdWarningNotify {
-	background-color: rgba(251, 74, 20, 0.8);
+	background-color: rgba(251, 74, 20, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -79,7 +83,7 @@
 }
 
 .tholdReTriggerNotify {
-	background-color: rgba(200, 125, 88, 0.8);
+	background-color: rgba(200, 125, 88, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -87,7 +91,7 @@
 }
 
 .tholdReTriggerEvent {
-	background-color: rgba(255, 122, 48, 0.8);
+	background-color: rgba(255, 122, 48, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -95,7 +99,7 @@
 }
 
 .tholdTriggerEvent {
-	background-color: rgba(250, 253, 158, 0.8);
+	background-color: rgba(250, 253, 158, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -103,7 +107,7 @@
 }
 
 .tholdWarnTrigger {
-	background-color: rgba(210, 223, 128, 0.8);
+	background-color: rgba(210, 223, 128, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -111,7 +115,7 @@
 }
 
 .tholdRestoralNotify {
-	background-color: rgba(204, 255, 204, 0.8);
+	background-color: rgba(204, 255, 204, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -119,7 +123,7 @@
 }
 
 .tholdRestoralEvent {
-	background-color: rgba(205, 207, 196, 0.8);
+	background-color: rgba(205, 207, 196, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -127,7 +131,7 @@
 }
 
 .tholdRestore {
-	background-color: rgba(204, 255, 204, 0.8);
+	background-color: rgba(204, 255, 204, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -135,7 +139,7 @@
 }
 
 .tholdAlertTrigger {
-	background-color: rgba(242, 23, 33, 0.8);
+	background-color: rgba(242, 23, 33, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -143,7 +147,7 @@
 }
 
 .tholdReTrigger {
-	background-color: rgba(250, 116, 32, 0.8);
+	background-color: rgba(250, 116, 32, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -151,7 +155,7 @@
 }
 
 .tholdWarning {
-	background-color: rgba(255, 122, 48, 0.8);
+	background-color: rgba(255, 122, 48, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -163,7 +167,7 @@
 }
 
 .tholdAlert {
-	background-color: rgba(242, 25, 36, 0.8);
+	background-color: rgba(242, 25, 36, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -191,7 +195,7 @@
 }
 
 .tholdBaseAlert {
-	background-color: rgba(251, 74, 20, 0.8);
+	background-color: rgba(251, 74, 20, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -203,7 +207,7 @@
 }
 
 .tholdNotice {
-	background-color: rgba(250, 253, 158, 0.8);
+	background-color: rgba(250, 253, 158, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -211,7 +215,7 @@
 }
 
 .tholdOk {
-	background-color: rgba(204, 255, 204, 0.8);
+	background-color: rgba(204, 255, 204, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -219,10 +223,42 @@
 }
 
 .tholdDisabled {
-	background-color: rgba(205, 207, 196, 0.8);
+	background-color: rgba(205, 207, 196, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
 	color: #0A0A0A;
+}
+
+.tholdGlyphEdit {
+	color: #666666;
+}
+
+.tholdGlyphDisable {
+	color: #990000;
+}
+
+.tholdGlyphEnable {
+	color: #006600;
+}
+
+.tholdGlyphChart {
+	color: #996600;
+}
+
+.tholdGlyphLog {
+	color: #999900;
+}
+
+.tholdGlyphAcknowledge {
+	color: #336600;
+}
+
+.tholdGlyphAcknowledge {
+	color: #336600;
+}
+
+.tholdGlyphAcknowledgeSuspend {
+	color: #336600;
 }
 
