--- a/themes/paper-plane/main.css
+++ b/themes/paper-plane/main.css
@@ -1,212 +1,244 @@
 .deviceUpFull {
-	background-color: rgba(25, 142, 50, 0.8);
+	background-color: rgba(25, 142, 50, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .deviceDownFull {
-	background-color: rgba(255, 0, 0, 0.8);
+	background-color: rgba(255, 0, 0, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .deviceUnknownFull {
-	background-color: rgba(0, 0, 255, 0.8);
+	background-color: rgba(0, 0, 255, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .deviceDisabledFull {
-	background-color: rgba(161, 161, 161, 0.8);
+	background-color: rgba(161, 161, 161, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .deviceRecoveringFull {
-	background-color: rgba(255, 143, 30, 0.8);
+	background-color: rgba(255, 143, 30, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .deviceErrorFull {
-	background-color: rgba(117, 15, 125, 0.8);
+	background-color: rgba(117, 15, 125, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .deviceNotMonFull {
-	background-color: rgba(250, 253, 158, 0.8);
+	background-color: rgba(250, 253, 158, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdAlertNotify {
-	background-color: rgba(242, 25, 36, 0.8);
+	background-color: rgba(242, 25, 36, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdAlert2Warn {
-	background-color: rgba(200, 25, 36, 0.8);
+	background-color: rgba(200, 25, 36, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdWarningNotify {
-	background-color: rgba(251, 74, 20, 0.8);
+	background-color: rgba(251, 74, 20, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdReTriggerNotify {
-	background-color: rgba(200, 125, 88, 0.8);
+	background-color: rgba(200, 125, 88, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdReTriggerEvent {
-	background-color: rgba(255, 122, 48, 0.8);
+	background-color: rgba(255, 122, 48, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdTriggerEvent {
-	background-color: rgba(250, 253, 158, 0.8);
+	background-color: rgba(250, 253, 158, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdWarnTrigger {
-	background-color: rgba(210, 223, 128, 0.8);
+	background-color: rgba(210, 223, 128, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdRestoralNotify {
-	background-color: rgba(204, 255, 204, 0.8);
+	background-color: rgba(204, 255, 204, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdRestoralEvent {
-	background-color: rgba(205, 207, 196, 0.8);
+	background-color: rgba(205, 207, 196, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdRestore {
-	background-color: rgba(204, 255, 204, 0.8);
+	background-color: rgba(204, 255, 204, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdAlertTrigger {
-	background-color: rgba(242, 23, 33, 0.8);
+	background-color: rgba(242, 23, 33, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdReTrigger {
-	background-color: rgba(250, 116, 32, 0.8);
+	background-color: rgba(250, 116, 32, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdWarning {
-	background-color: rgba(255, 122, 48, 0.8);
+	background-color: rgba(255, 122, 48, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdAlert {
-	background-color: rgba(242, 25, 36, 0.8);
+	background-color: rgba(242, 25, 36, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdAckCol {
-	background-color: rgba(238, 130, 238, 0.8);
+	background-color: rgba(238, 130, 238, 0.2);
 }
 
 .tholdAcknowledgment {
-	background-color: rgba(238, 130, 238, 0.8);
+	background-color: rgba(238, 130, 238, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdBaseAlert {
-	background-color: rgba(251, 74, 20, 0.8);
+	background-color: rgba(251, 74, 20, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdNotice {
-	background-color: rgba(250, 253, 158, 0.8);
+	background-color: rgba(250, 253, 158, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdOk {
-	background-color: rgba(204, 255, 204, 0.8);
+	background-color: rgba(204, 255, 204, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
 }
 
 .tholdDisabled {
-	background-color: rgba(205, 207, 196, 0.8);
+	background-color: rgba(205, 207, 196, 0.2);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
-	color: #0A0A0A;
+	color: #FAFAFA;
+}
+
+.tholdGlyphEdit {
+	color: #666666;
+}
+
+.tholdGlyphDisable {
+	color: #990000;
+}
+
+.tholdGlyphEnable {
+	color: #006600;
+}
+
+.tholdGlyphChart {
+	color: #996600;
+}
+
+.tholdGlyphLog {
+	color: #999900;
+}
+
+.tholdGlyphAcknowledge {
+	color: #336600;
+}
+
+.tholdGlyphAcknowledge {
+	color: #336600;
+}
+
+.tholdGlyphAcknowledgeSuspend {
+	color: #336600;
 }
 
