--- a/themes/paw/main.css
+++ b/themes/paw/main.css
@@ -1,5 +1,5 @@
 .deviceUpFull {
-	background-color: rgba(25, 142, 50, 0.8);
+	background-color: rgba(25, 142, 50, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -8,25 +8,25 @@
 }
 
 .deviceDownFull {
-	background-color: rgba(255, 0, 0, 0.8);
+	background-color: rgba(255, 0, 0, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
 	padding: 3px;
-	color: #0A0A0A;
+	color: #FFFFFF;
 }
 
 .deviceUnknownFull {
-	background-color: rgba(0, 0, 255, 0.8);
+	background-color: rgba(0, 0, 255, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
 	padding: 3px;
-	color: #0A0A0A;
+	color: #FFFFFF;
 }
 
 .deviceDisabledFull {
-	background-color: rgba(161, 161, 161, 0.8);
+	background-color: rgba(161, 161, 161, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -35,7 +35,7 @@
 }
 
 .deviceRecoveringFull {
-	background-color: rgba(255, 143, 30, 0.8);
+	background-color: rgba(255, 143, 30, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -44,16 +44,16 @@
 }
 
 .deviceErrorFull {
-	background-color: rgba(117, 15, 125, 0.8);
+	background-color: rgba(117, 15, 125, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
 	padding: 3px;
-	color: #0A0A0A;
+	color: #FFFFFF;
 }
 
 .deviceNotMonFull {
-	background-color: rgba(250, 253, 158, 0.8);
+	background-color: rgba(250, 253, 158, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -62,7 +62,7 @@
 }
 
 .tholdAlertNotify {
-	background-color: rgba(242, 25, 36, 0.8);
+	background-color: rgba(242, 25, 36, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -71,7 +71,7 @@
 }
 
 .tholdAlert2Warn {
-	background-color: rgba(200, 25, 36, 0.8);
+	background-color: rgba(200, 25, 36, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -80,7 +80,7 @@
 }
 
 .tholdWarningNotify {
-	background-color: rgba(251, 74, 20, 0.8);
+	background-color: rgba(251, 74, 20, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -89,7 +89,7 @@
 }
 
 .tholdReTriggerNotify {
-	background-color: rgba(200, 125, 88, 0.8);
+	background-color: rgba(200, 125, 88, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -98,7 +98,7 @@
 }
 
 .tholdReTriggerEvent {
-	background-color: rgba(255, 122, 48, 0.8);
+	background-color: rgba(255, 122, 48, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -107,7 +107,7 @@
 }
 
 .tholdTriggerEvent {
-	background-color: rgba(250, 253, 158, 0.8);
+	background-color: rgba(250, 253, 158, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -116,7 +116,7 @@
 }
 
 .tholdWarnTrigger {
-	background-color: rgba(210, 223, 128, 0.8);
+	background-color: rgba(210, 223, 128, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -125,7 +125,7 @@
 }
 
 .tholdRestoralNotify {
-	background-color: rgba(204, 255, 204, 0.8);
+	background-color: rgba(204, 255, 204, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -134,7 +134,7 @@
 }
 
 .tholdRestoralEvent {
-	background-color: rgba(205, 207, 196, 0.8);
+	background-color: rgba(205, 207, 196, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 11.11%;
@@ -143,7 +143,7 @@
 }
 
 .tholdRestore {
-	background-color: rgba(204, 255, 204, 0.8);
+	background-color: rgba(204, 255, 204, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -152,7 +152,7 @@
 }
 
 .tholdAlertTrigger {
-	background-color: rgba(242, 23, 33, 0.8);
+	background-color: rgba(242, 23, 33, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -161,7 +161,7 @@
 }
 
 .tholdReTrigger {
-	background-color: rgba(250, 116, 32, 0.8);
+	background-color: rgba(250, 116, 32, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -170,7 +170,7 @@
 }
 
 .tholdWarning {
-	background-color: rgba(255, 122, 48, 0.8);
+	background-color: rgba(255, 122, 48, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -179,20 +179,20 @@
 }
 
 .tholdAlert {
-	background-color: rgba(242, 25, 36, 0.8);
+	background-color: rgba(242, 25, 36, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
 	padding: 3px;
-	color: #0A0A0A;
+	color: #FFFFFF;
 }
 
 .tholdAckCol {
-	background-color: rgba(238, 130, 238, 0.8);
+	background-color: rgba(238, 130, 238, 0.6);
 }
 
 .tholdAcknowledgment {
-	background-color: rgba(238, 130, 238, 0.8);
+	background-color: rgba(238, 130, 238, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -201,7 +201,7 @@
 }
 
 .tholdBaseAlert {
-	background-color: rgba(251, 74, 20, 0.8);
+	background-color: rgba(251, 74, 20, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -210,7 +210,7 @@
 }
 
 .tholdNotice {
-	background-color: rgba(250, 253, 158, 0.8);
+	background-color: rgba(250, 253, 158, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -219,7 +219,7 @@
 }
 
 .tholdOk {
-	background-color: rgba(204, 255, 204, 0.8);
+	background-color: rgba(204, 255, 204, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
@@ -228,11 +228,43 @@
 }
 
 .tholdDisabled {
-	background-color: rgba(205, 207, 196, 0.8);
+	background-color: rgba(205, 207, 196, 0.6);
 	text-align: center;
 	white-space: nowrap;
 	width: 14%;
 	padding: 3px;
 	color: #0A0A0A;
+}
+
+.tholdGlyphEdit {
+	color: #666666;
+}
+
+.tholdGlyphDisable {
+	color: #990000;
+}
+
+.tholdGlyphEnable {
+	color: #006600;
+}
+
+.tholdGlyphChart {
+	color: #996600;
+}
+
+.tholdGlyphLog {
+	color: #999900;
+}
+
+.tholdGlyphAcknowledge {
+	color: #336600;
+}
+
+.tholdGlyphAcknowledge {
+	color: #336600;
+}
+
+.tholdGlyphAcknowledgeSuspend {
+	color: #336600;
 }
 
